--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 <title>XM</title>
-<meta name="viewport" content="width=device-width, initial-scale=1" />
+<meta name="viewport" content="width=device-width, initial-scale=1">
 
-<script src="jquery.min.js" type="text/javascript"></script>
+<script src="jquery.min.js"></script>
 
-<script src="owl.carousel.min.js" type="text/javascript"></script>
-<script src="script.js" type="text/javascript"></script>
+<script src="owl.carousel.min.js"></script>
+<script src="script.js"></script>
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.2.0/css/all.css">
 <link rel="stylesheet" href="https://static.fontawesome.com/css/fontawesome-app.css">
-<link rel='stylesheet' id='brands-css'  href='brands.min.css?ver=5.15.3' media='all' />
+<link rel='stylesheet' id='brands-css'  href='brands.min.css?ver=5.15.3' media='all'>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link rel='stylesheet' id='google-fonts-1-css' href='https://fonts.googleapis.com/css?family=Bebas+Neue|Roboto:300,400,500,700,800,900&#038;display=auto&#038;ver=6.1.1' media='all' />
+<link rel='stylesheet' id='google-fonts-1-css' href='https://fonts.googleapis.com/css?family=Bebas+Neue|Roboto:300,400,500,700,800,900&#038;display=auto&#038;ver=6.1.1' media='all'>
 
-<link href="owl.carousel.min.css" rel="stylesheet" type="text/css" media="all" />
+<link href="owl.carousel.min.css" rel="stylesheet" type="text/css" media="all">
 <link rel="stylesheet" href="reset.css">
 <link rel="stylesheet" href="styles.css">
 </head>
@@ -28,7 +28,7 @@
       <div class="itemcol itemcol-2 cl1 itemcol-middle">
         <div class="group-block text-left" style=" line-height: 0; width: 132px; ">
           <a class="" href="#" title="XM">
-            <img src="images/logo.png" width="140" alt="XM" />
+            <img src="images/logo.png" width="140" alt="XM">
           </a>
         </div>
       </div>
@@ -46,7 +46,7 @@
 
 <div class="row-1 text-center">
   <div class="group-1">
-    <img class="img-bg bg-2" src="images/bg-2.png" width="1199" alt="" />
+    <img class="img-bg bg-2" src="images/bg-2.png" width="1199" alt="">
     <div class="r-wrap">
       <p class="p1">trade with</p>
       <h2><strong>Zero Swaps</strong> on All XM Ultra Low Accounts for more than 25 instruments!</h2>
@@ -59,53 +59,53 @@
   <div class="group-2-wrap">
     <div class="r-wrap">
       <div id="trade" class="group-2 text-left">
-        <img class="img-bg bg-0" src="images/bg-0.png" width="151" alt="" style="display: none;" />        
+        <img class="img-bg bg-0" src="images/bg-0.png" width="151" alt="" style="display: none;">        
 
       
       </div>
     </div>
   </div>
   <div class="group-3">
-    <img class="img-bg bg-4 bg-4-1200" src="images/bg-4.png" width="1438" alt="" />
-    <img class="img-bg bg-4 bg-4-768" src="images/bg-4-768.png" width="1438" alt="" style="display: none;" />
+    <img class="img-bg bg-4 bg-4-1200" src="images/bg-4.png" width="1438" alt="">
+    <img class="img-bg bg-4 bg-4-768" src="images/bg-4-768.png" width="1438" alt="" style="display: none;">
     <div class="r-wrap">
-      <img class="img-bg bg-5" src="images/bg-5.png" width="690" alt="" />
+      <img class="img-bg bg-5" src="images/bg-5.png" width="690" alt="">
       <h2>Why <strong>Trade</strong> with XM?</h2>
-      <hr />
+      <hr>
       <p class="p1">We have been providing traders around the world with the same <strong>premium experience</strong> for over a decade. As an industry-leader, we know what the modern trader needs to be successful in the markets.</p>
       <div class="g">
         <div class="item i1">
           <div class="g-block">
             <h3>Superior Trade Execution</h3>
-            <hr />
+            <hr>
             <p>99% of trades are executed in less than a second, with no requotes or rejections.</p>
-            <img src="images/fast-execusion-icon.png" width="205" alt="Superior Trade Execution" />
+            <img src="images/fast-execusion-icon.png" width="205" alt="Superior Trade Execution">
           </div>
         </div>
         <div class="item i2">
            <div class="g1">
             <div class="g-block">
                   <h3>Competitive Pricing</h3>
-                  <hr />
-                  <p>We offer some of the lowest spreads and we don’t <br />charge commissions.</p>
-                  <img src="images/competitive-pricing-icon.png" width="90" alt="Competitive Pricing" />
+                  <hr>
+                  <p>We offer some of the lowest spreads and we don’t <br>charge commissions.</p>
+                  <img src="images/competitive-pricing-icon.png" width="90" alt="Competitive Pricing">
             </div>
            </div>
            <div class="g2">
              <div class="g2-item">
                 <div class="g-block">
                   <h3>Advanced <br>Technology</h3>
-                  <hr />
+                  <hr>
                   <p>Trade on MT4 or MT5, with expert tools, across desktop, web and mobile.</p>
-                  <img src="images/tech-icon.png" width="70" alt="Advanced Technology" />
+                  <img src="images/tech-icon.png" width="70" alt="Advanced Technology">
                 </div>
              </div>
              <div class="g2-item">
               <div class="g-block">
                 <h3>Start with $5</h3>
-                <hr />
+                <hr>
                 <p>Start trading your preferred instruments with as little as a $5 minimum deposit.</p>
-                <img src="images/dollar-icon.png" width="70" alt="Start with $5" />
+                <img src="images/dollar-icon.png" width="70" alt="Start with $5">
               </div>
              </div>
            </div>
@@ -119,72 +119,68 @@
   <div class="r-wrap">
     <h2>Event Gallery</h2>
     <div class="event-gallery owl-carousel owl-theme">
-      <div class="item slide-i"><img width="164" src="images/free-image.png" alt="free-image" /></div>
-      <div class="item slide-i"><img width="164" src="images/free-image.png" alt="free-image" /></div>
-      <div class="item slide-i"><img width="164" src="images/free-image.png" alt="free-image" /></div>
-      <div class="item slide-i"><img width="164" src="images/free-image.png" alt="free-image" /></div>
-      <div class="item slide-i"><img width="164" src="images/free-image.png" alt="free-image" /></div>
-      <div class="item slide-i"><img width="164" src="images/free-image.png" alt="free-image" /></div>
-      <div class="item slide-i"><img width="164" src="images/free-image.png" alt="free-image" /></div>
+      <div class="item slide-i"><img width="164" src="images/free-image.png" alt="free-image"></div>
+      <div class="item slide-i"><img width="164" src="images/free-image.png" alt="free-image"></div>
+      <div class="item slide-i"><img width="164" src="images/free-image.png" alt="free-image"></div>
+      <div class="item slide-i"><img width="164" src="images/free-image.png" alt="free-image"></div>
+      <div class="item slide-i"><img width="164" src="images/free-image.png" alt="free-image"></div>
+      <div class="item slide-i"><img width="164" src="images/free-image.png" alt="free-image"></div>
+      <div class="item slide-i"><img width="164" src="images/free-image.png" alt="free-image"></div>
     </div>
   </div>
 </div>
 
 <div class="row-3">
   <div class="r-wrap">
-      <div class="group-1">
-        <div class="g1-item g1-i1">
-          <div class="g1-block">
-            <hr />
-            <h2>
-              <span class="s1">Big<span>.</span></span>
-              <span class="s1">Fair<span>.</span></span>
-              <span class="s1">Human<span>.</span></span>
-            </h2>
-            <p>Learn why <strong>over 5 million clients choose XM</strong> as their trusted online broker.</p>
-          </div>
+    <div class="group-1">
+      <div class="g1-item g1-i1">
+        <div class="g1-block">
+          <hr>
+          <h2>
+            <span class="s1">Big<span>.</span></span>
+            <span class="s1">Fair<span>.</span></span>
+            <span class="s1">Human<span>.</span></span>
+          </h2>
+          <p>Learn why <strong>over 5 million clients choose XM</strong> as their trusted online broker.</p>
         </div>
-        <div class="g1-item g1-i2">
-            <div class="group-2">
-              <div class="g2-item g2-i1">
-                  <p><img src="images/authorised-and-regulated.png" width="49" alt="Authorised and Regulated" /></p>
-                  <h3>Authorised and Regulated</h3>
-                  <p>At XM, we adhere to all regulatory standards and are fully authorised and regulated by FSC.</p>
-              </div>
-              <div class="g2-item g2-i2">
-                  <p><img src="images/committed-and-fair.png" width="49" alt="Committed and Fair" /></p>
-                  <h3>Committed and Fair</h3>
-                  <p>We operate with complete transparency and adhere to the highest professional and ethical standards.</p>
-              </div>
-              <div class="g2-item g2-i3">
-                  <p><img src="images/multi-award-winning.png" width="49" alt="Multi-Award-Winning" /></p>
-                  <h3>Multi-Award-Winning</h3>
-                  <p>Over the years we have received over 40 awards for the quality of our products and services.</p>
-              </div>
-              <div class="g2-item g2-i4">
-                  <p><img src="images/support.png" width="49" alt="24/7 Support" /></p>
-                  <h3>24/7 Support</h3>
-                  <p>Our support agents are on hand 24/7 to answer your questions or assist you with any issues.</p>
-              </div>
-            </div>
+      </div>
+      <div class="g1-item g1-i2">
+        <div class="group-2">
+          <div class="g2-item g2-i1">
+              <p><img src="images/authorised-and-regulated.png" width="49" alt="Authorised and Regulated"></p>
+              <h3>Authorised and Regulated</h3>
+              <p>At XM, we adhere to all regulatory standards and are fully authorised and regulated by FSC.</p>
+          </div>
+          <div class="g2-item g2-i2">
+              <p><img src="images/committed-and-fair.png" width="49" alt="Committed and Fair"></p>
+              <h3>Committed and Fair</h3>
+              <p>We operate with complete transparency and adhere to the highest professional and ethical standards.</p>
+          </div>
+          <div class="g2-item g2-i3">
+              <p><img src="images/multi-award-winning.png" width="49" alt="Multi-Award-Winning"></p>
+              <h3>Multi-Award-Winning</h3>
+              <p>Over the years we have received over 40 awards for the quality of our products and services.</p>
+          </div>
+          <div class="g2-item g2-i4">
+              <p><img src="images/support.png" width="49" alt="24/7 Support"></p>
+              <h3>24/7 Support</h3>
+              <p>Our support agents are on hand 24/7 to answer your questions or assist you with any issues.</p>
           </div>
         </div>
       </div>
     </div>
   </div>
 </div>
-
-
 <div class="footer-v2">
   <div class="r-wrap">
     <div class="rowcol rowcol-center rowcol1">
       <div class="itemcol item1">
         <div class="group-block logos">
           <p>
-            <img width="136" src="images/metaquotes.png" alt="Meta Quotes" />
-            <img width="131" src="images/verisign.png" alt="Verisign" />
-            <img width="110" src="images/unif.png" alt="Unif" />
-            <img width="195" src="images/investorsinpeople.png" alt="Investors In People" />
+            <img width="136" src="images/metaquotes.png" alt="Meta Quotes">
+            <img width="131" src="images/verisign.png" alt="Verisign">
+            <img width="110" src="images/unif.png" alt="Unif">
+            <img width="195" src="images/investorsinpeople.png" alt="Investors In People">
           </p>
         </div>
       </div>
@@ -192,16 +188,16 @@
         <div class="group-block follow-us">
           <p>
             <span>Follow us on</span>
-            <a title="Facebook" href="#"><img width="11" src="images/fb-icon.png" alt="Facebook" /></a>
-            <a title="Twitter" href="#"><img width="17" src="images/twitter-icon.png" alt="Twitter" /></a>
-            <a title="Youtube" href="#"><img width="18" src="images/youtube-icon.png" alt="Youtube" /></a>
-            <a title="Instagram" href="#"><img width="16" src="images/instagram-icon.png" alt="Instagram" /></a>
-            <a title="Linkedin" href="#"><img width="16" src="images/linkedin-icon.png" alt="Linkedin" /></a>
+            <a title="Facebook" href="#"><img width="11" src="images/fb-icon.png" alt="Facebook"></a>
+            <a title="Twitter" href="#"><img width="17" src="images/twitter-icon.png" alt="Twitter"></a>
+            <a title="Youtube" href="#"><img width="18" src="images/youtube-icon.png" alt="Youtube"></a>
+            <a title="Instagram" href="#"><img width="16" src="images/instagram-icon.png" alt="Instagram"></a>
+            <a title="Linkedin" href="#"><img width="16" src="images/linkedin-icon.png" alt="Linkedin"></a>
           </p>
         </div>
       </div>
     </div>
-    <hr />
+    <hr>
     <div class="rowcol rowcol-center rowcol2">
       <div class="itemcol item1">
         <div class="group-block links">
@@ -216,7 +212,7 @@
       </div>
       <div class="itemcol item2">
         <div class="group-block">
-          <p><img width="182" src="images/tradingpoint.png" alt="Trading Point" /></p>
+          <p><img width="182" src="images/tradingpoint.png" alt="Trading Point"></p>
         </div>
       </div>
     </div>
