--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
   <div class="group-2-wrap">
     <div class="r-wrap">
       <div id="trade" class="group-2 text-left">
-        <img class="img-bg bg-0" src="images/bg-0.png" width="151" alt="" style="display: none;">        
+        <div class="div-0"><img class="img-bg bg-0" src="images/bg-0.png" width="151" alt="" style="display: none;"></div>
 
       
       </div>
